@@ -1,0 +1,29 @@
+#!/bin/sh
+
+# The Myproxy cron script deletes users proxies that have expired
+GLOBUS_INSTALL_PATH=@GSI_INSTALL_PATH@
+export GLOBUS_INSTALL_PATH
+MYPROXY_SERVER_DIR=@prefix@/myproxy-server
+
+globus_tool_path=`${GLOBUS_INSTALL_PATH}/bin/globus-tools-path`
+grid_proxy_info=${globus_tool_path}/bin/grid-proxy-info
+
+cert_store="${MYPROXY_SERVER_DIR}/store"
+
+for i in ${cert_store}/*.creds; do
+    file=`echo $i | sed 's/.creds//'`
+    # timeleft is in seconds
+    timeleft=`${grid_proxy_info} -f $i -timeleft 2>/dev/null`
+    echo $timeleft
+    if [ "$timeleft" = "-1" ]; then
+	echo "deleting proxy $i"
+	rm -f ${file}.creds
+	rm -f ${file}.data
+    fi
+done
+
+
+
+    
+
+
